# deps.rs

./: .gitignore  Cargo.toml
assets/styles/: _badge-tabs.sass
libs/badge/: Cargo.toml
libs/badge/tests/: badge_maker_fixtures.rs
libs/badge/tests/fixtures/: README.md
src/: main.rs
src/server/: error.rs  mod.rs
src/server/views/: feed.rs  mod.rs
src/server/views/html/: feed.rs  mod.rs  status.rs
