[package]
name = "badge"
version = "0.2.0"
description = "Simple badge generator"
authors = ["Onur Aslan <onur@onur.im>"]
license-file = "LICENSE"
repository = "https://github.com/onur/docs.rs"
documentation = "https://docs.rs/badge"
edition = "2024"

[lib]
path = "badge.rs"

[dependencies]
base64 = "0.22"
rusttype = "0.9"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
serde_urlencoded = "0.7"
xml_c14n = "0.3"
